# PySysLinkBase

./: .gitignore  CMakeLists.txt  PySysLinkBaseConfig.cmake.in  README.md
.VSCodeCounter/2024-12-22_16-42-30/: details.md  diff-details.md  diff.md  diff.txt  results.md  results.txt
.VSCodeCounter/2024-12-22_16-43-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-12-22_16-49-44/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2024-12-22_16-50-29/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-12-22_16-51-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.codechecker/: README.md  SKIPFILE
.codechecker/report_git/: BasicOdeSolver.cpp_clang-tidy_afa42390f661c582ee73597ef27a10c3.plist.html  BasicOdeSolver.cpp_cppcheck_afa42390f661c582ee73597ef27a10c3.plist.html  BlockEventsHandler.cpp_clang-tidy_f5c60c46288e9e8d8be93f13b70aa629.plist.html  EulerBackwardStepSolver.cpp_clang-tidy_54e2ef48008ddb8c41b7d211f7eacdc3.plist.html  EulerBackwardStepSolver.cpp_clangsa_54e2ef48008ddb8c41b7d211f7eacdc3.plist.html  EulerForwardStepSolver.cpp_clang-tidy_ec6199bf4382ede07acc60935a106a2b.plist.html  ISimulationBlock.cpp_clang-tidy_0a90efec99007efd4bbd1754a85aca6a.plist.html  InputPort.cpp_clang-tidy_af998642e8c5a0a24b1ed74069567d0b.plist.html  ModelParser.cpp_clang-tidy_d8a00498a109f266c6e52fd8bd28d662.plist.html  ModelParser.cpp_cppcheck_d8a00498a109f266c6e52fd8bd28d662.plist.html  ModelParser_test.cpp_clang-tidy_d5b1173a2bbef31d38e764f6f0e83f8e.plist.html  Port.cpp_clang-tidy_7b5086673f8a36ee9fd3e615550caad2.plist.html  SampleTime.cpp_clang-tidy_f3621da08c5848634759a156b5133a8d.plist.html  SimulationManager.cpp_clang-tidy_8c20f6bf7d2ddbd287089db0eed08c50.plist.html  SimulationManager.cpp_clangsa_8c20f6bf7d2ddbd287089db0eed08c50.plist.html  SimulationManager.cpp_cppcheck_8c20f6bf7d2ddbd287089db0eed08c50.plist.html  SimulationModel.cpp_clang-tidy_501f92ffcd2a1cd80caf58d3354f748c.plist.html  SolverFactory.cpp_clang-tidy_1a905256022671678f8e79f15a81fddb.plist.html  SolverFactory.cpp_clangsa_1a905256022671678f8e79f15a81fddb.plist.html  async.cpp_clang-tidy_5dcafc7458307c8fde510123a004aaf5.plist.html  binary.cpp_clang-tidy_e33ef15c8ec66fc092ae5987fb9a1ab3.plist.html  bundled_fmtlib_format.cpp_clang-tidy_10c1bf7684b0040e852d877ae80a0b7c.plist.html  bundled_fmtlib_format.cpp_clangsa_10c1bf7684b0040e852d877ae80a0b7c.plist.html  index.html  (+26 more)
.github/workflows/: ci.yml
BlockLibraries/: CMakeLists.txt
BlockTypeSupportPlugins/BasicCppSupport/: CMakeLists.txt  RegisterBlockFactories.cpp  SampleTimeConversion.h  SimulationBlockCpp.cpp  SimulationBlockCpp.h
Examples/: CMakeLists.txt  config.yaml  test_continuous.cpp  test_continuous_implicit.cpp  test_main.cpp  test_multirate.cpp  test_step_continuous.cpp
Pybind11Bindings/: PybindModule.cpp
Tests/: CMakeLists.txt  DummyBlockFactory.h  DummySimulationBlock.h  ModelParserTestFixture.h  ModelParser_test.cpp  SimulationModel_test.cpp  dummy_system.yaml  system1.json  system1.yaml  system1_complex.yaml  system1_continuous.yaml  system1_multirate.yaml  test_continuous.cpp  test_import.py  test_main.cpp  test_multirate.cpp
build_tests/: PySysLinkBaseConfig.cmake
src/: BasicOdeSolver.cpp  BasicOdeSolver.h  BlockEventsHandler.cpp  BlockEventsHandler.h  BlockTypeSupportPluginLoader.cpp  BlockTypeSupportPluginLoader.h  BlockTypeSupportPlugingLoader.cpp  BlockTypeSupportPlugingLoader.h  CMakeLists.txt  ConfigurationValue.h  EulerForwardStepSolver.cpp  EulerForwardStepSolver.h  FullySupportedSignalValue.cpp  FullySupportedSignalValue.h  IBlockEventsHandler.h  IBlockFactory.h  IOdeSolver.h  IOdeStepSolver.h  ISimulationBlock.cpp  ISimulationBlock.h  ISimulationBlockWithContinuousStates.h  ModelParser.cpp  ModelParser.h  PortLink.cpp  PortLink.h  SampleTime.cpp  SampleTime.h  SimulationManager.cpp  SimulationManager.h  SimulationModel.cpp  SimulationModel.h  SimulationOptions.h  SimulationOutput.cpp  SimulationOutput.h  SpdlogManager.cpp  main.cpp
src/BasicBlocks/: CMakeLists.txt  Constant.cpp  Constant.h  Display.cpp  Display.h  Sumator.cpp  Sumator.h
src/BlockEvents/: DisplayUpdateBlockEvent.h  ValueUpdateBlockEvent.h
src/BlockLibraries/BasicBlocks/: Constant.cpp  Constant.h  Display.cpp  Display.h  Sumator.cpp
src/BlockTypeSupports/: CMakeLists.txt
src/BlockTypeSupports/BasicCpp/: BlockWithContinuousStates.h  BlockWithoutContinuousStates.cpp  CMakeLists.txt  SimulationBlock.cpp  SimulationBlock.h
src/BlockTypeSupports/BasicCppSupport/: BlockFactoryCpp.cpp  BlockFactoryCpp.h  BlockWithContinuousStates.h  BlockWithoutContinuousStates.cpp  CMakeLists.txt  SampleTimeConversion.cpp  SampleTimeConversion.h  SimulationBlockCpp.cpp  SimulationBlockCpp.h
src/BlockTypes/BasicCpp/: CMakeLists.txt  ConfigurationValue.h  SampleTime.cpp  SampleTime.h  SimulationBlock.h
src/ContinuousAndOde/: BasicOdeSolver.cpp  BasicOdeSolver.h  EulerBackwardStepSolver.cpp  EulerBackwardStepSolver.h  EulerForwardStepSolver.cpp  EulerForwardStepSolver.h  IOdeStepSolver.h  ISimulationBlockWithContinuousStates.h  OdeintStepSolver.cpp  OdeintStepSolver.h  SolverFactory.cpp
src/PortsAndSignalValues/: InputPort.cpp  InputPort.h  OutputPort.cpp  OutputPort.h  Port.cpp  Port.h  PortTypeMetadata.h  SignalValue.h  UnknownTypeSignalValue.h
src/PySysLinkBase/: BlockTypeSupportPlugingLoader.h  CMakeLists.txt  ConfigurationValue.h  ContinuousState.cpp  ContinuousState.h  IBlockFactory.h  ISimulationBlock.h  ISimulationBlockWithContinuousStates.h  ModelParser.cpp  ModelParser.h  PortLink.h  SampleTime.cpp  SampleTime.h  SimulationModel.cpp  SimulationModel.h
src/PySysLinkBase/PortsAndSignalValues/: OutputPort.cpp  Port.cpp  Port.h  UnknownTypeSignalValue.h
src/PySysLinkBase/deprecated/: IUnknownTypeInputPort.h  IUnknownTypeOutputPort.h  IUnknownTypePort.cpp  IUnknownTypePort.h  TypedInputPort.h  TypedOutputPort.h
(+5 files in other folders)
